Update de css et nettoyage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     </header>
 
-    <!-- Welcome Responsive -->
+    <!-- Welcome -->
     <section id="welcome">
       <div class="welcome">
         <h1>SkymDev's Portfolio.</h1>
