Changements de padding et de taille de font

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                 de code.<br />
                 Je passe littéralement tout mon temps libre a développer.<br />
                 Des sites, mon serveur (accessoirement), Mysk, le bot Discord de <a href="#skym-mc">Skym-Mc</a>, ou même
-                <a href="https://skym-mc.fr" target="_BLANK">son site.</a>.</h4>
+                <a href="https://skym-mc.fr" target="_BLANK">son site.</a>.
+            </h4>
         </div>
     </section>
 
