Update du design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="/js/projets.js"></script>
 
     <!-- Title -->
-    <title>SkymDev // Portfolio.</title>
+    <title>//portfolio_skymdev</title>
 </head>
 
 <body>
@@ -44,24 +44,26 @@
     <!-- A propos -/- about -->
     <section id="about">
         <div class="about">
-            <h1>//I'm Skym</h1>
+            <h1>//im_skym</h1>
             <h2>A propos de moi</h2>
             <h4>Je suis en <span class="about-classe">classe de Seconde</span> et je vis en <span
                     class="about-pays">France</span>.<br />
-                J'ai un serveur Minecraft, du nom de <a href="#skym-mc">Skym-Mc</a>, ouvert depuis quelques temps.<br />
-                J'aime beaucoup Apple (Pour ne pas dire que c'est ma marque préférée)<br />
+                    <br>• J'ai un serveur Minecraft, du nom de <a href="#skym-mc">Skym-Mc</a>, ouvert depuis quelques temps.<br />
+                    <br>• Apple est ma marque de prédilection.<br />
+                    <br>• J'aime les dinosaures, en particulier le Dreadnoughtus (veut dire "Qui ne craint rien").<br />
 
-                <br />• Mes playlists sur Apple Music (Si ça peut en aider certains :D) :
-                <a href="https://music.apple.com/fr/playlist/ap%C3%A9ro/pl.u-KVXBD7LuZX1G7JN"
-                    target="BLANK_">Apéritifs</a> - <a
-                    href="https://music.apple.com/fr/playlist/yayou/pl.u-NpXmzaVImkL9zq5"
+
+                <br />• Mes playlists sur Apple Music :
+                <a href="https://music.apple.com/fr/playlist/yanniss-sanctuary/pl.u-KVXBBkBTZX1G7JN"
+                    target="BLANK_">Chill</a> - <a
+                    href="https://music.apple.com/fr/playlist/pl.u-kv9lb8dt7N42xmb"
                     target="BLANK_">Personnelle</a>
         </div>
     </section>
 
     <!-- Projets -/- projets -->
     <section id="wrapper">
-        <h1>//Projets</h1>
+        <h1>//projects_skym</h1>
         <h2>Les projets que je réalise</h2>
         <div class="wrapper">
             <a href="https://skym-mc.fr" target="_BLANK">
@@ -140,14 +142,14 @@
     <!-- Développement -/- dev -->
     <section id="dev">
         <div class="dev">
-            <h1>//Développement</h1>
+            <h1>//dev_skym</h1>
             <h2>Je suis aussi développeur</h2>
             <h4>Je développe en HTML, CSS et NodeJS.<br />
                 J'utilise VSCode, GitHub et le terminal.<br />
                 J'aime beaucoup développer des choses. Je dirais même que ma vie ne serait pas pareille sans une touche
                 de code.<br />
                 Je passe littéralement tout mon temps libre a développer.<br />
-                Des sites, mon serveur (accessoirement), Mysk, le bot Discord de <a href="#skym-mc">Skym-Mc</a>, ou même
+                Des sites, mon serveur (accessoirement), Mysk, le bot Discord de <a href="https://discord.skym-mc.fr" target="_BLANK">Skym-Mc</a>, ou même
                 <a href="https://skym-mc.fr" target="_BLANK">son site.</a>.
             </h4>
         </div>
