Update et correction de fautes

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <h2>A propos de moi</h2>
             <h4>Je suis en <span class="about-classe">classe de Seconde</span> et je vis en <span
                     class="about-pays">France</span>.<br />
-                    <br>• J'ai un serveur Minecraft, du nom de <a href="#skym-mc">Skym-Mc</a>, ouvert depuis quelques temps.<br />
-                    <br>• Apple est ma marque de prédilection.<br />
-                    <br>• J'aime les dinosaures, en particulier le Dreadnoughtus (veut dire "Qui ne craint rien").<br />
+                    • J'ai un serveur Minecraft, du nom de <a href="#skym-mc">Skym-Mc</a>, ouvert depuis quelques temps.<br />
+                    • Apple est ma marque de prédilection.<br />
+                    • J'aime les dinosaures, en particulier le Dreadnoughtus (veut dire "Qui ne craint rien").<br />
 
 
                 <br />• Mes playlists sur Apple Music :
@@ -150,7 +150,7 @@
                 de code.<br />
                 Je passe littéralement tout mon temps libre a développer.<br />
                 Des sites, mon serveur (accessoirement), Mysk, le bot Discord de <a href="https://discord.skym-mc.fr" target="_BLANK">Skym-Mc</a>, ou même
-                <a href="https://skym-mc.fr" target="_BLANK">son site.</a>.
+                <a href="https://skym-mc.fr" target="_BLANK">son site</a>.
             </h4>
         </div>
     </section>
