--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Skym">
 
     <!-- Favicon -->
-    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -16,16 +16,9 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@700&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap">
-
-    <!-- Scripts -->
-    <script src="/js/projets.js"></script>
 
     <!-- Title -->
-    <title>//portfolio_skymdev</title>
+    <title>SkymDev's Portfolio</title>
 </head>
 
 <body>
@@ -37,7 +30,9 @@
     <!-- Welcome -->
     <section id="welcome">
         <div class="welcome">
-            <h1>SkymDev's Portfolio.</h1>
+            <h1>SkymDev's<br>
+                <span class="portfolio">Portfolio</span>
+            </h1>
         </div>
     </section>
 
@@ -45,94 +40,84 @@
     <section id="about">
         <div class="about">
             <h1>//im_skym</h1>
-            <h2>A propos de moi</h2>
-            <h4>Je suis en <span class="about-classe">classe de Seconde</span> et je vis en <span
-                    class="about-pays">France</span>.<br />
-                    • J'ai un serveur Minecraft, du nom de <a href="#skym-mc">Skym-Mc</a>, ouvert depuis quelques temps.<br />
-                    • Apple est ma marque de prédilection.<br />
-                    • J'aime les dinosaures, en particulier le Dreadnoughtus (veut dire "Qui ne craint rien").<br />
-
-
-                <br />• Mes playlists sur Apple Music :
-                <a href="https://music.apple.com/fr/playlist/yanniss-sanctuary/pl.u-KVXBBkBTZX1G7JN"
-                    target="BLANK_">Chill</a> - <a
-                    href="https://music.apple.com/fr/playlist/pl.u-kv9lb8dt7N42xmb"
-                    target="BLANK_">Personnelle</a>
+            <h2>About me</h2>
+            <h4>Hello! I'm Skym, a french web developer. I always loved code and computers in general, since my
+                childhood.
+                I learned how to create website on my own with YouTube videos and years. I also love biology, and I'd
+                love to become, one day, geneticist.
+                Waiting for this day to come, I manage/work on mutliple projects, that you'll find a bit lower on this
+                page. I've also made a "list" of every website that
+                I created or worked on.
+            </h4>
         </div>
     </section>
 
-    <!-- Projets -/- projets -->
+    <!-- Actualités -->
     <section id="wrapper">
-        <h1>//projects_skym</h1>
-        <h2>Les projets que je réalise</h2>
+        <h1>//projects</h1>
+        <h2>All my projects</h2>
         <div class="wrapper">
+            <!--<a href="LIENBACK" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>YouTube</h3>
+                        <h4>Commencé : 10 Mai 2020</h4>
+                    </div>
+                </article>
+            </a>
+            <a href="LIENBACK" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>evgames.fr</h3>
+                        <h4>Création : 9 Décembre 2021</h4>
+                    </div>
+                </article>
+            </a>
+            <a href="LIENBACK" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>skymme.fr</h3>
+                        <h4>Création : 8 Janvier 2022</h4>
+                    </div>
+                </article>
+            </a>-->
             <a href="https://skym-mc.fr" target="_BLANK">
                 <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">Skym-Mc</h3>
-                        <p class="created_date">Création : 14 Avril 2022</p>
-                        <p class="project_desc">Serveur Minecraft sur le thème de la vie sur Terre. (CEO)</p>
+                    <div class="card_summary">
+                        <h3>Skym-Mc</h3>
+                        <h4>Création : xx/xx/2020</h4>
                     </div>
                 </article>
             </a>
-
-            <a href="https://fr.fiverr.com/skymdev/create-you-a-custom-website-in-html-and-css" target="_BLANK">
+            <a href="https://fr.fiverr.com/skymdev?up_rollout=true" target="_BLANK">
                 <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">Freelance</h3>
-                        <p class="created_date">Commencé : 25 Juin 2021</p>
-                        <p class="project_desc">Je propose mes services de développeur Web.</p>
+                    <div class="card_summary">
+                        <h3>Freelance</h3>
+                        <h4>Started : 06/25/2021</h4>
                     </div>
                 </article>
             </a>
-
-            <a href="https://www.youtube.com/channel/UCP7khIEKy1x4PaY61fV_qbw/videos" target="_BLANK">
-                <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">YouTube</h3>
-                        <p class="created_date">Commencé : 10 Mai 2020</p>
-                        <p class="project_desc">Je fais des vidéos sur YouTube depuis le 10 Mai 2020.
-                        </p>
-                    </div>
-                </article>
-            </a>
-
             <a href="https://serendipitartist.com" target="_BLANK">
                 <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">serendipitartist.com</h3>
-                        <p class="created_date">Création : 10 Août 2022</p>
-                        <p class="project_desc">Site web minimaliste pour serendipitartist.</p>
+                    <div class="card_summary">
+                        <h3>serendipitartist.com</h3>
+                        <h4>Creation : 07/10/2022</h4>
                     </div>
                 </article>
             </a>
-
-            <a href="https://github.com/Skym-m/skymdev.fr" target="_BLANK">
+            <a href="https://skymdev.fr" target="_BLANK">
                 <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">skymdev.fr</h3>
-                        <p class="created_date">Création : 25 Août 2022</p>
-                        <p class="project_desc">Mon Portfolio sur GitHub.</p>
+                    <div class="card_summary">
+                        <h3>skymdev.fr</h3>
+                        <h4>Création : 07/25/2022</h4>
                     </div>
                 </article>
             </a>
-
-            <a href="https://github.com/Skym-m/skymme.fr" target="_BLANK">
+            <a href="https://cretaceous-kingdom.skym-mc.fr" target="_BLANK">
                 <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">skymme.fr</h3>
-                        <p class="created_date">Création : 8 Janvier 2022</p>
-                        <p class="project_desc">Site web simple et minimaliste sur GitHub.</p>
-                    </div>
-                </article>
-            </a>
-
-            <a href="https://github.com/Skym-m/evgames.fr" target="_BLANK">
-                <article class="card_wrapper">
-                    <div class="project_summary">
-                        <h3 class="project_title">evgames.fr</h3>
-                        <p class="created_date">Création : 9 Décembre 2021</p>
-                        <p class="project_desc">Site web d'evgames.fr, sur GitHub. (Premier serveur Minecraft)</p>
+                    <div class="card_summary">
+                        <h3>cretaceous-kingdom.com</h3>
+                        <h4>Création : 12/12/2023</h4>
                     </div>
                 </article>
             </a>
@@ -142,16 +127,13 @@
     <!-- Développement -/- dev -->
     <section id="dev">
         <div class="dev">
-            <h1>//dev_skym</h1>
-            <h2>Je suis aussi développeur</h2>
-            <h4>Je développe en HTML, CSS et NodeJS.<br />
-                J'utilise VSCode, GitHub et le terminal.<br />
-                J'aime beaucoup développer des choses. Je dirais même que ma vie ne serait pas pareille sans une touche
-                de code.<br />
-                Je passe littéralement tout mon temps libre a développer.<br />
-                Des sites, mon serveur (accessoirement), Mysk, le bot Discord de <a href="https://discord.skym-mc.fr" target="_BLANK">Skym-Mc</a>, ou même
-                <a href="https://skym-mc.fr" target="_BLANK">son site</a>.
-            </h4>
+            <h1>//dev</h1>
+            <h2>SkymDev</h2>
+            <h4>As a web developer, I offer my services on fiverr. Feel free to contact me if you would like to order a
+                website. I'd be glad to talk with you.<br>
+                I'm not using any web editor such as Divi, Wordpress... All my code is hand-written, so that I have full
+                control on it. I use softwares such as Visual Studio Code, GitHub... I only use HTML & CSS. i also
+                maintain all the website that I create, with CloudFlare.</h4>
         </div>
     </section>
 
