Correction d’une faute

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 website. I'd be glad to talk with you.<br>
                 I'm not using any web editor such as Divi, Wordpress... All my code is hand-written, so that I have full
                 control on it. I use softwares such as Visual Studio Code, GitHub... I only use HTML & CSS. i also
-                maintain all the website that I create, with CloudFlare.</h4>
+                maintain all the websites that I create, with CloudFlare.</h4>
         </div>
     </section>
 
