Correction de texte

--- a/index.html
+++ b/index.html
@@ -52,40 +52,16 @@
         </div>
     </section>
 
-    <!-- Actualités -->
+    <!-- Projets -->
     <section id="wrapper">
         <h1>//projects</h1>
         <h2>All my projects</h2>
         <div class="wrapper">
-            <!--<a href="LIENBACK" target="_BLANK">
-                <article class="card_wrapper">
-                    <div class="card_summary">
-                        <h3>YouTube</h3>
-                        <h4>Commencé : 10 Mai 2020</h4>
-                    </div>
-                </article>
-            </a>
-            <a href="LIENBACK" target="_BLANK">
-                <article class="card_wrapper">
-                    <div class="card_summary">
-                        <h3>evgames.fr</h3>
-                        <h4>Création : 9 Décembre 2021</h4>
-                    </div>
-                </article>
-            </a>
-            <a href="LIENBACK" target="_BLANK">
-                <article class="card_wrapper">
-                    <div class="card_summary">
-                        <h3>skymme.fr</h3>
-                        <h4>Création : 8 Janvier 2022</h4>
-                    </div>
-                </article>
-            </a>-->
             <a href="https://skym-mc.fr" target="_BLANK">
                 <article class="card_wrapper">
                     <div class="card_summary">
                         <h3>Skym-Mc</h3>
-                        <h4>Création : xx/xx/2020</h4>
+                        <h4>Creation : xx/xx/2020</h4>
                     </div>
                 </article>
             </a>
@@ -109,7 +85,7 @@
                 <article class="card_wrapper">
                     <div class="card_summary">
                         <h3>skymdev.fr</h3>
-                        <h4>Création : 07/25/2022</h4>
+                        <h4>Creation : 07/25/2022</h4>
                     </div>
                 </article>
             </a>
@@ -117,7 +93,7 @@
                 <article class="card_wrapper">
                     <div class="card_summary">
                         <h3>cretaceous-kingdom.com</h3>
-                        <h4>Création : 12/12/2023</h4>
+                        <h4>Creation : 12/12/2023</h4>
                     </div>
                 </article>
             </a>
