Update de design et de texte

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <section id="about">
         <div class="about">
             <h1>//im_skym</h1>
-            <h2>About me</h2>
-            <h4>Hello! I'm Skym, a french web developer. I always loved code and computers in general, since my
-                childhood.
-                I learned how to create website on my own with YouTube videos and years. I also love biology, and I'd
-                love to become, one day, geneticist.
-                Waiting for this day to come, I manage/work on mutliple projects, that you'll find a bit lower on this
-                page. I've also made a "list" of every website that
-                I created or worked on.
+            <h2>A propos de moi</h2>
+            <h4>Bonjour ! Je suis Skym, un développeur web français.
+                J'ai toujours aimé le code et les ordinateurs en général depuis mon enfance.
+                J'ai appris à créer des sites web par moi-même grâce à des vidéos sur YouTube et au fil des années.
+                J'adore aussi la biologie et j'aimerais devenir un jour généticien.
+                En attendant que ce jour arrive, je gère et travaille sur plusieurs projets, que vous trouverez un peu
+                plus bas sur cette page.
+                J'ai également dressé une "liste" de tous les sites web que j'ai créés ou sur lesquels j'ai travaillé.
             </h4>
         </div>
     </section>
@@ -55,7 +55,7 @@
     <!-- Projets -->
     <section id="wrapper">
         <h1>//projects</h1>
-        <h2>All my projects</h2>
+        <h2>Tous mes projets</h2>
         <div class="wrapper">
             <a href="https://skym-mc.fr" target="_BLANK">
                 <article class="card_wrapper">
@@ -105,11 +105,13 @@
         <div class="dev">
             <h1>//dev</h1>
             <h2>SkymDev</h2>
-            <h4>As a web developer, I offer my services on fiverr. Feel free to contact me if you would like to order a
-                website. I'd be glad to talk with you.<br>
-                I'm not using any web editor such as Divi, Wordpress... All my code is hand-written, so that I have full
-                control on it. I use softwares such as Visual Studio Code, GitHub... I only use HTML & CSS. i also
-                maintain all the websites that I create, with CloudFlare.</h4>
+
+            <h4>En tant que développeur web, je propose mes services sur Fiverr. N'hésitez pas à me contacter si vous
+                souhaitez commander un site web. Je serais ravi de discuter avec vous.<br>
+                Je n'utilise aucun éditeur web tel que Divi, Wordpress, etc. Tout mon code est écrit à la main, ce qui
+                me permet d'avoir un contrôle total dessus. J'utilise des logiciels tels que Visual Studio Code, GitHub,
+                etc. Je n'utilise que HTML et CSS. De plus, je maintiens tous les sites web que je crée avec CloudFlare.
+            </h4>
         </div>
     </section>
 
@@ -117,6 +119,11 @@
     <footer>
         <div class="footerChild">
             <p>skymdev.fr by <a href="#" target="_blank"><span class="footer-text">Skym</span></a></p>
+            <a href="https://www.instagram.com/yns_pri/" target="_blank">Instagram</a>
+            <a href="https://twitter.com/skymdev" target="_blank">Twitter</a>
+            <a href="https://www.threads.net/@yns_pri" target="_blank">Threads</a>
+            <a href="https://discord.gg/3wBPrAzUHH" target="_blank">Discord</a>
+            <a href="mailto:yannis.perrier@icloud.com" target="_blank">Adresse e-mail</a>
         </div>
     </footer>
 </body>
