Ajout du RMCH dans les projets

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
                     </div>
                 </article>
             </a>
+            <a href="https://fb.watch/q_slxXjbc4/" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>Vidéo promotionnelle pour la ville de Privas</h3>
+                        <h4>Creation : 05/02/2024</h4>
+                    </div>
+                </article>
+            </a>
             <a href="https://fr.fiverr.com/skymdev?up_rollout=true" target="_BLANK">
                 <article class="card_wrapper">
                     <div class="card_summary">
