--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
                     </div>
                 </article>
             </a>
+            <a href="https://admilaeti.fr" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>admilaeti.fr</h3>
+                        <h4>Creation : 18/12/2024</h4>
+                    </div>
+                </article>
+            </a>
+            <a href="https://boucheriegarnier.fr" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>boucheriegarnier.fr</h3>
+                        <h4>Creation : 18/12/2024</h4>
+                    </div>
+                </article>
+            </a>
+            <a href="https://www.linkedin.com/posts/s%C3%A9bastien-perrier-287393196_jean-lain-occasions-valence-activity-7265066634757767168-Z8J6?utm_source=share&utm_medium=member_desktop" target="_BLANK">
+                <article class="card_wrapper">
+                    <div class="card_summary">
+                        <h3>Vidéo promotionnelle pour Jean Lain Mobilités</h3>
+                        <h4>Creation : 27/11/2024</h4>
+                    </div>
+                </article>
+            </a>
         </div>
     </section>
 
